--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "yum": "^0.1.1"
+    "yum": "^0.1.1",
+    "yup": "^0.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
